--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <section class="container">
       <div class="row">
         <div class="col-12 col-md-10 col-lg-8 ml-md-1 ml-lg-2 center">
-          <h2 class="section-title">Client's Feedback About Me</h2>
+          <h2 class="section-title">Client's Feedback About Me<npm run dev
+            /h2>
           <p class="section-description">
             It is very easy to start smoking but it is an uphill task to quit
             it. Ask any chain smoker or even a person.
@@ -24,88 +25,10 @@
         </div>
       </div>
       <div class="row">
-        <div id="interface_carusel" class="col-12 carusel">
-          <div class="list-view">
-            <div class="list">
-              <div class="card">
-                <img class="img" src="./img/user1.webp" alt="user" />
-                <div class="desc">
-                  <p>
-                    Do you want to be even more successful? Learn to love
-                    learning and growth. The more effort you put into improving
-                    your skills, the bigger the payoff you.
-                  </p>
-                  <h4>Harriet Maxwell</h4>
-                  <p>CEO at Google</p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./img/user2.webp" alt="user" />
-                <div class="desc">
-                  <p>
-                    A purpose is the eternal condition for success. Every former
-                    smoker can tell you just how hard it is to stop smoking
-                    cigarettes. However.
-                  </p>
-                  <h4>Carolyn Craig</h4>
-                  <p>CEO at Facebook</p>
-                </div>
-              </div>
-              <div class="card">
-                <img class="img" src="./img/user3.jpg" alt="user" />
-                <div class="desc">
-                  <p>
-                    Do you want to be even more successful? Learn to love
-                    learning and growth. The more effort you put into improving
-                    your skills, the bigger the payoff you.
-                  </p>
-                  <h4>Mary Popins</h4>
-                  <p>CEO at Instagram</p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./img/user4.jpg" alt="user" />
-                <div class="desc">
-                  <p>
-                    A purpose is the eternal condition for success. Every former
-                    smoker can tell you just how hard it is to stop smoking
-                    cigarettes. However.
-                  </p>
-                  <h4>Carolyn Craig</h4>
-                  <p>CEO at Facebook</p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./img/user5.jpg" alt="user" />
-                <div class="desc">
-                  <p>
-                    A purpose is the eternal condition for success. Every former
-                    smoker can tell you just how hard it is to stop smoking
-                    cigarettes. However.
-                  </p>
-                  <h4>Carolyn Craig</h4>
-                  <p>CEO at Facebook</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="actions">
-            <div class="dots">
-              <div class="dot"></div>
-              <div class="dot"></div>
-              <div class="dot"></div>
-              <div class="dot"></div>
-              <div class="dot"></div>
-            </div>
-
-            <div class="slide-bar">
-              <span class="lnr lnr-arrow-up prev"></span>
-              <span class="lnr lnr-arrow-down next"></span>
-            </div>
-          </div>
-        </div>
+        <div id="interface_carusel" class="col-12 carusel"></div>
       </div>
     </section>
+
+    <script src="./js/pages/home.js" type="module"></script>
   </body>
 </html>
